# Hermes

./: .env.example  .env.sample  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  structure.sh
alembic/: env.py
alembic/versions/: 20241021_0001_initial_schema.py
api/: Dockerfile  __init__.py  alembic.ini  audit.py  deps.py  jobs.py  logging_config.py  main.py  metrics.py  models.py  rate_limit.py  schemas.py  security.py
api/alembic/: env.py  script.py.mako
api/alembic/versions/: 0001_init.py  0002_stage2_core.py  0003_student_bio.py  0004_payments_invoices.py
api/routers/: analytics.py  assignments.py  auth.py  dashboard.py  lessons.py  mems.py  notifications.py  payments.py  student_bio.py  students.py  topics.py  tournaments.py
api/scripts/: seed.py  seed_lessons.py  seed_stage2.py
api/tests/: conftest.py  test_main.py  test_smoke.py  test_stage2.py
app/: main.py
app/api/: dependencies.py  middleware.py
app/api/routers/: __init__.py  assignments.py  auth.py  health.py  students.py
app/core/: config.py  logging.py  security.py  tracing.py
app/db/: __init__.py  base.py  session.py
app/instrumentation/: metrics.py  rate_limiter.py
app/models/: __init__.py  assignment.py  idempotency.py  student.py  user.py
app/schemas/: __init__.py  assignment.py  auth.py  student.py
app/services/: assignments.py  auth.py  idempotency.py  students.py
tests/: conftest.py  test_students.py
web/: Dockerfile  index.html  package-lock.json  package.json
web/src/: App.tsx  index.css
web/src/lib/: api.ts
web/src/pages/: Assignments.tsx  Calendar.tsx  Dashboard.tsx  Finance.tsx  Heatmap.tsx  PriorityRadar.tsx  StudentBio.tsx  StudentProfile.tsx
