[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-mvp"
version = "0.3.0"
description = "MVP for tutoring platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy==2.0.34",
    "alembic==1.13.2",
    "psycopg2-binary==2.9.9",
    "passlib[argon2]==1.7.4",
    "pyjwt==2.9.0",
    "redis==5.0.8",
    "rq==1.16.2",
    "rq-scheduler==0.11.0",
    "requests==2.32.3",
    "prometheus-client==0.20.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.6.0",
    "python-multipart==0.0.9",
    "tenacity==8.5.0",
    "python-jose[cryptography]==3.3.0",
    "structlog==24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.23.8",
    "httpx==0.27.2",
    "black==24.8.0",
    "ruff==0.6.9",
    "mypy==1.11.2",
    "types-requests==2.32.0.20241016",
    "types-passlib==1.7.7.20240106",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api", "api.*", "scripts", "tests", "tests.*"]

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true